--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&display=swap");
 body {
-  background-image: url(/img/modigliani.jpg);
+  background-image: url(/img/adz.jpg);
   background-repeat: no-repeat;  
   background-size: cover;
   background-position: center;
   margin: 0;
   padding: 0;
-  font-family: "Big Shoulders Display", cursive;
+  font-family: Arial, Helvetica, sans-serif;
 
 }
+
 main {
   height: 100%;
   position: relative;
@@ -16,13 +17,13 @@ main {
  }
 
 header {
-  color:  white;
-  height: 1px;
-  position: none;
+  color:  black;
+  height: 2px;
+  position: relative;
   top: 25;
   left: 55;           
   height: 100vh;
-  z-index: 1px;
+  z-index: 2px;
   text-align: center;
 }
   
@@ -32,52 +33,91 @@ div h1{
   padding: 0;
   font-size: 1.0em;
   text-transform: uppercase;
-  color: white;
+  color: black;
   text-align: center;
 
 } 
 
-.banner {
-  width: 100%;
-  height: 100vh;
-  overflow:auto;
-  display:block;
-  margin: 0 auto;
-  justify-content: left;
-  align-items: center;
-}
-
-.banner .content {
-  position: none;
-  z-index: 1;
-  max-width: 1000px;
-  margin: none;
-  text-align: center;
-}
-.banner .content h1 {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  font-size: 4.5em;
-  text-transform: uppercase;
-  color: white;
-}
-.banner .content p {
-  font-size: 1.5em;
-  color: white;
-}
 .banner .content img {
   width: 30px;
   height: 30px;
 }
 
+ul{
+  display:ruby-text;
+  justify-content: space-between;
+  list-style-type:none;
+  align-items: center;
+  padding: 16px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+body img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+ }
+
+.center {
+  text-align: center;
+}
+
+h1 {
+  color: black;
+  font-size: 1.0em;
+}
+
+h2{
+  color: black;
+  font-size: 0.8em;
+
+}
+
+.container {
+  padding: 0px 50px;
+  text-align: center;
+  border: 0px;
+}
+
+nav {
+  font-size: 20px;
+  align-items: center;
+}
+
+nav a:hover {
+  color: #5BBE42;
+}
+
+.contact-form input{
+  width: 100%;
+  padding: 8px 0;
+  margin: 20px 0;
+}
+
+.contact-form input[type=text] {
+  height: 100px;
+}
+
+button {
+  color: black;
+  background-color: wheat;
+  border: none;
+  width: 100px;
+  height: 30px;
+  margin-bottom: 20px;
+}
+
 footer {
   min-height: 100%;
-  margin: auto;
-  position: 0%;
-  bottom: 0%;
+  margin: 20px;
+  position: 0px;
+  bottom:0px;
   font-size: 10px;
-  color: white;  
+  color: black;  
   text-align: center;
-
+  margin-top: 2px;
 }
