--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&display=swap");
 body {
-  background-image: url(/img/adz.jpg);
+  background-image: url(img/adz.jpg);
   background-repeat: no-repeat;  
   background-size: cover;
   background-position: center;
@@ -17,14 +17,8 @@ main {
  }
 
 header {
-  color:  black;
-  height: 2px;
-  position: relative;
-  top: 25;
-  left: 55;           
-  height: 100vh;
-  z-index: 2px;
-  text-align: center;
+   padding: 100px 0px;
+   align-items: center;
 }
   
 div h1{
@@ -57,13 +51,20 @@ a {
 }
 
 body img {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
- }
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5%;
+  text-align: center;
+
+}
 
 .center {
   text-align: center;
+}
+
+.center img{
+  width: 100px;
+  height: 100px;
 }
 
 h1 {
@@ -89,7 +90,7 @@ nav {
 }
 
 nav a:hover {
-  color: #5BBE42;
+  color: wheat;
 }
 
 .contact-form input{
@@ -98,9 +99,10 @@ nav a:hover {
   margin: 20px 0;
 }
 
-.contact-form input[type=text] {
+#A3{
   height: 100px;
 }
+
 
 button {
   color: black;
@@ -113,11 +115,17 @@ button {
 
 footer {
   min-height: 100%;
-  margin: 20px;
+  margin: 0px;
   position: 0px;
   bottom:0px;
   font-size: 10px;
   color: black;  
+  text-align:center;
+ }
+
+#P1{
+  color: #696969	;
+  min-height: 100%;
+  margin: 10px;
   text-align: center;
-  margin-top: 2px;
 }
