--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ main {
 
 header {
    padding: 100px 0px;
-   align-items: center;
+   text-align: center;
 }
   
 div h1{
@@ -99,8 +99,9 @@ nav a:hover {
   margin: 20px 0;
 }
 
+
 #A3{
-  height: 100px;
+  height: 60px;
 }
 
 
