--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&display=swap");
 body {
-  background-image: url(img/adz.jpg);
+  background-color: black;
   background-repeat: no-repeat;  
   background-size: cover;
   background-position: center;
