--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ nav a:hover {
 
 button {
   color: black;
-  background-color: wheat;
+  background-color: white;
   border: none;
   width: 100px;
   height: 30px;
