--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@600&display=swap");
 body {
-  background-color: wheat;
+  background-color: gray;
   background-repeat: no-repeat;  
   background-size: cover;
   background-position: center;
@@ -78,6 +78,10 @@ h2{
 
 }
 
+#ul{
+  align-items: center;
+}
+
 .container {
   padding: 0px 50px;
   text-align: center;
@@ -90,7 +94,7 @@ nav {
 }
 
 nav a:hover {
-  color: wheat;
+  color: black;
 }
 
 .contact-form input{
@@ -104,10 +108,13 @@ nav a:hover {
   height: 60px;
 }
 
+#p{
+  color: black;
+}
 
 button {
   color: black;
-  background-color: white;
+  background-color:darkgray;
   border: none;
   width: 100px;
   height: 30px;
@@ -125,7 +132,7 @@ footer {
  }
 
 #P1{
-  color: #696969	;
+  color:black	;
   min-height: 100%;
   margin: 10px;
   text-align: center;
